Fix mobile hero contrast reveal

--- a/style.css
+++ b/style.css
@@ -404,6 +404,7 @@ a { color: inherit; text-decoration: none; }
     width: 100%;
     z-index: 2;
     clip-path: inset(100% 0 0 0);
+    -webkit-clip-path: inset(100% 0 0 0);
 }
 
 .sticky-hero__text-dark .sticky-hero__headline { color: var(--ink); }
@@ -1264,6 +1265,7 @@ a { color: inherit; text-decoration: none; }
     width: 100%;
     z-index: 2;
     clip-path: inset(100% 0 0 0);
+    -webkit-clip-path: inset(100% 0 0 0);
 }
 
 .sticky-statement__text-light .sticky-statement__headline { color: var(--cream); }
